objects/LAT_Log__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LAT Logs</relationshipLabel>
        <relationshipName>LAT_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Country__c</fullName>
        <label>LAT Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Date__c</fullName>
        <label>LAT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_DurationInSeconds__c</fullName>
        <formula>(LAT_ReturnTime__c - LAT_StartTime__c) * 24 * 60 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT Duration In Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Opportunity2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Opportunity</label>
        <referenceTo>LAT_Opportunity__c</referenceTo>
        <relationshipLabel>LAT Logs</relationshipLabel>
        <relationshipName>LAT_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>LAT Logs</relationshipLabel>
        <relationshipName>LAT_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_OrderNumber__c</fullName>
        <label>LAT Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Origin__c</fullName>
        <label>LAT Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ReturnTime__c</fullName>
        <label>LAT Return Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_StartTime__c</fullName>
        <label>LAT Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LAT_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LAT User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Version__c</fullName>
        <description>Field for information on the version of the mobile APP Compass that has performed the login</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LAT Log</label>
    <listViews>
        <fullName>Mobile_Logs_Today</fullName>
        <columns>NAME</columns>
        <columns>LAT_User__c</columns>
        <columns>LAT_StartTime__c</columns>
        <columns>LAT_Version__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Log__c.LAT_Mobile_Login</value>
        </filters>
        <label>Mobile Logs Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mobile_Logs_by_Day</fullName>
        <columns>NAME</columns>
        <columns>LAT_User__c</columns>
        <columns>LAT_Version__c</columns>
        <columns>LAT_StartTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Log__c.LAT_Mobile_Login</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>4/16/2018 12:00 AM</value>
        </filters>
        <label>Mobile Logs by Day</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAT_Opportunity__c</columns>
        <columns>LAT_Account__c</columns>
        <columns>LAT_Opportunity2__c</columns>
        <columns>LAT_OrderNumber__c</columns>
        <columns>LAT_Origin__c</columns>
        <columns>LAT_ReturnTime__c</columns>
        <columns>LAT_StartTime__c</columns>
        <columns>LAT_User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <language>es_MX</language>
    </listViews>
    <listViews>
        <fullName>searchByDay</fullName>
        <columns>LAT_User__c</columns>
        <columns>LAT_Country__c</columns>
        <columns>LAT_Date__c</columns>
        <columns>LAT_Origin__c</columns>
        <columns>LAT_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/6/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_Log__c.LAT_Mobile_Login</value>
        </filters>
        <label>searchByDay</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>LAT Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT Logs</pluralLabel>
    <recordTypes>
        <fullName>LAT_General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Mobile_Login</fullName>
        <active>true</active>
        <label>Mobile Login</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>